// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Text /> with a valid size and maxWidth matches its snapshot 1`] = `
<span
  class=
      y-text
      y-textSize-xLarge
      y-text__ellipsis
      {
        display: inline-block;
        font-size: 2.2rem;
        height: 2.8rem;
        line-height: 2.8rem;
        max-width: 200px;
        overflow: hidden;
        text-overflow: ellipsis;
        vertical-align: -0.5rem;
        white-space: nowrap;
      }
>
  test content
</span>
`;

exports[`<Text /> with a valid size matches its snapshot 1`] = `
<span
  class=
      y-text
      y-textSize-xLarge
      {
        display: inline-block;
        font-size: 2.2rem;
        line-height: 2.8rem;
      }
>
  test content
</span>
`;

exports[`<Text /> with additional className matches its snapshot 1`] = `
<span
  class=
      y-text
      TEST_CLASSNAME
      {
        display: inline-block;
      }
>
  test content
</span>
`;

exports[`<Text /> with bold matches its snapshot 1`] = `
<span
  class=
      y-text
      {
        display: inline-block;
        font-weight: 600;
      }
>
  test content
</span>
`;

exports[`<Text /> with color secondary matches its snapshot 1`] = `
<span
  class=
      y-text
      {
        color: #495361;
        display: inline-block;
      }
>
  test content
</span>
`;

exports[`<Text /> with default options matches its snapshot 1`] = `
<span
  class=
      y-text
      {
        display: inline-block;
      }
>
  test content
</span>
`;

exports[`<Text /> with maxWidth 500px matches its snapshot 1`] = `
<span
  class=
      y-text
      y-text__ellipsis
      {
        display: inline-block;
        max-width: 500px;
        overflow: hidden;
        text-overflow: ellipsis;
        vertical-align: -0.4rem;
        white-space: nowrap;
      }
>
  test content
</span>
`;

exports[`<Text /> with screenreader text empty string matches its snapshot 1`] = `
<span
  class=
      y-text
      {
        display: inline-block;
      }
>
  <span
    aria-hidden="true"
  >
    test content
  </span>
  <span
    class="y-screenreaderText"
    style="display: block; padding: 0px; border: 0px; position: absolute; margin: -1px; height: 1px; width: 1px; overflow: hidden; word-wrap: normal;"
  />
</span>
`;

exports[`<Text /> with screenreader text matches its snapshot 1`] = `
<span
  class=
      y-text
      {
        display: inline-block;
      }
>
  <span
    aria-hidden="true"
  >
    test content
  </span>
  <span
    class="y-screenreaderText"
    style="display: block; padding: 0px; border: 0px; position: absolute; margin: -1px; height: 1px; width: 1px; overflow: hidden; word-wrap: normal;"
  >
    SCREENREADER TEXT
  </span>
</span>
`;

exports[`<Text /> with uppercase matches its snapshot 1`] = `
<span
  class=
      y-text
      {
        display: inline-block;
        text-transform: uppercase;
      }
>
  test content
</span>
`;
